# Finger-BCI-Decoding

./: .gitignore  CLAUDE.md  Functions.py  README.md  base-reimplementation-plan.md  main_model_training.py  main_online_processing.py  pyproject.toml
docs/: IMPLEMENTATION_DIFFERENCES.md  PAPER_METHODOLOGY.md  RTX50_GPU_SETUP.md  WSL2_GPU_SETUP.md
evaluation/: __init__.py  test_evaluation.py
online/: __init__.py  online_smoothing.py
preprocessing/: __init__.py  signal_processing.py
scripts/: run_experiment.py
training/: __init__.py  cross_validation.py
utils/: __init__.py  logging_config.py  training_callbacks.py
