[project]
name = "finger-bci-decoding"
version = "0.1.0"
description = "EEG-based Brain-Computer Interface for Individual Finger-Level Robotic Hand Control"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [
    { name = "Yidan Ding" }
]
keywords = ["BCI", "EEG", "deep learning", "EEGNet", "motor imagery"]

dependencies = [
    # Deep Learning - TensorFlow 2.10 (CPU on Windows, GPU via WSL2)
    "tensorflow==2.10.1",

    # Scientific computing
    "numpy>=1.23.0,<1.24",
    "scipy>=1.10.0,<1.12",

    # Machine learning utilities
    "scikit-learn>=1.2.0,<1.4",

    # Data visualization
    "matplotlib>=3.7.0",

    # Progress bars
    "tqdm>=4.65.0",

    # Protobuf compatible version
    "protobuf>=3.19.0,<3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "black>=23.0.0",
]

notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "training",
    "evaluation",
    "online",
    "scripts",
]

[dependency-groups]
dev = [
    "pytest>=7.3.0",
    "black>=23.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
